base/builds/regulus/argocd/projects/inference/manifests/kube-mcp-server/HTTPRoute.kube-mcp-server.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-mcp-server
spec:
  hostnames:
  - kube-mcp-server.apps.phalnet.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-ingress
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: kube-mcp-server
      port: 8000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
